# base

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  deny.toml  lychee.toml  tdx-gcp-test-plan.md  tdx-plan.md
.github/actions/setup/: action.yml
.github/benchmark/: transfer-only.yml
.github/workflows/: action-tests.yml  ci-core.yml  ci.yml  claude-review.yml  zepter.yml
actions/: README.md
actions/harness/: Cargo.toml  README.md
actions/harness/src/: action.rs  conductor.rs  engine.rs  harness.rs  l2.rs  lib.rs  matrix.rs  miner.rs  node.rs  p2p.rs  test_rollup_config.rs
actions/harness/tests/: batcher_hardfork_transitions.rs  batcher_local_safe_head.rs  derivation.rs  ecotone_activation.rs  hardfork_activation.rs  holocene_activation.rs  l1_mining.rs  unsafe_signing.rs
apps/vibenet-ui/public/: app.js  faucet.html  index.html  style.css
crates/batcher/admin/: Cargo.toml  README.md
crates/batcher/blobs/: Cargo.toml  README.md
crates/batcher/comp/: Cargo.toml  README.md
crates/batcher/core/: README.md
crates/batcher/encoder/: Cargo.toml
crates/batcher/service/: Cargo.toml
crates/batcher/source/: README.md
crates/common/chains/: Cargo.toml  README.md
crates/common/chains/src/: chain.rs  config.rs  derived.rs  l1_registry.rs  lib.rs  registry.rs  test_utils.rs  upgrade.rs  upgrades.rs
crates/common/chains/tests/: hardfork_consistency.rs
crates/common/precompiles/: Cargo.toml  README.md
crates/common/precompiles/src/: address.rs  bls12_381.rs  bn254_pair.rs  bootstrap.rs  error.rs  lib.rs  provider.rs  spec.rs
crates/common/precompiles/src/b20/: dispatch.rs  mod.rs
crates/common/precompiles/src/b20_factory/: mod.rs
crates/common/precompiles/src/base_token/: dispatch.rs  ledger.rs  lifecycle.rs  mod.rs  permit.rs  tests.rs
crates/common/precompiles/src/base_token_factory/: dispatch.rs  mod.rs
crates/common/precompiles/src/base_token_policy_registry/: mod.rs
crates/common/precompiles/src/dex/: abi.rs  dispatch.rs  gas.rs  math.rs  mod.rs  storage.rs  token.rs
crates/common/precompiles/src/plan_1/: mod.rs
crates/common/precompiles/src/plan_1/base_token/: authz.rs  compliance.rs  features.rs  memo.rs  supply.rs
crates/common/precompiles/src/plan_1/base_token_policy_registry/: dispatch.rs
crates/common/precompiles/src/plan_2/: mod.rs
crates/common/precompiles/src/plan_2/base_asset_factory/: dispatch.rs  mod.rs
crates/common/precompiles/src/plan_2/base_security_factory/: dispatch.rs  mod.rs
crates/common/precompiles/src/plan_2/base_stablecoin_factory/: dispatch.rs  mod.rs
crates/common/precompiles/src/plan_2/policy_registry/: dispatch.rs  mod.rs  tests.rs
crates/common/precompiles/src/plan_2/shared/: core.rs  mod.rs
crates/common/precompiles/src/plan_2/stablecoin/: compliance.rs  dispatch.rs  features.rs  mod.rs  supply.rs
crates/common/precompiles/src/plan_2/token/: mod.rs
crates/common/precompiles/src/plan_2/token/base_asset/: dispatch.rs  features.rs  mod.rs  supply.rs
crates/common/precompiles/src/plan_2/token/base_security/: compliance.rs  dispatch.rs  features.rs  force_transfer.rs  holder_limit.rs  mod.rs  supply.rs  tests.rs
crates/common/precompiles/tests/: storage.rs
crates/common/precompiles/tests/storage_tests/: packing.rs
crates/common/precompiles/tests/storage_tests/solidity/: precompiles.rs
crates/common/precompiles/tests/storage_tests/solidity/testdata/: b20.layout.json  b20.sol
crates/infra/bootnode-monitor/: Cargo.toml
crates/infra/bootnode-monitor/src/: discoverer.rs  discv4_prober.rs  fork_id.rs  lib.rs  prober.rs
crates/infra/roxy-backend/: Cargo.toml
crates/infra/roxy-backend/src/: group.rs  health.rs  http.rs  load_balancer.rs  safe_tip.rs
crates/infra/roxy-cache/: Cargo.toml
crates/infra/roxy-cache/src/: compressed.rs  fallback.rs  memory.rs  redis.rs  rmap.rs  rpc_cache.rs
crates/infra/roxy-cli/: Cargo.toml
crates/infra/roxy-cli/src/: backends.rs  builder.rs  cli.rs  groups.rs  lib.rs  logging.rs  routing.rs  server.rs  validators.rs
crates/infra/roxy-rpc/: Cargo.toml
crates/infra/roxy-rpc/src/: codec.rs  lib.rs  rate_limiter.rs  router.rs  validator.rs
crates/infra/roxy-runtime/: Cargo.toml  README.md
crates/infra/roxy-runtime/src/: deterministic.rs  tokio_runtime.rs
crates/infra/roxy-server/: Cargo.toml
crates/infra/roxy-server/src/: error.rs  http.rs  lib.rs  metrics.rs  state.rs  websocket.rs
crates/infra/roxy-test-utils/: Cargo.toml
crates/infra/roxy-test-utils/src/: lib.rs
crates/infra/roxy-types/: Cargo.toml
crates/infra/roxy-types/src/: error.rs
crates/infra/snappy/: Cargo.toml  README.md
crates/infra/snappy/src/: config.rs  container.rs  lib.rs  orchestrator.rs  snapshot.rs  upload.rs
crates/infra/snappy/tests/: e2e_test.rs
crates/infra/snappy/tests/common/: mod.rs
crates/proof/tee/tdx-collateral/: Cargo.toml  README.md
crates/proof/tee/tdx-collateral/src/: collateral.rs  config.rs  error.rs  lib.rs
crates/proof/tee/tdx-prover/: Cargo.toml  README.md
crates/proof/tee/tdx-prover/src/: backend.rs  error.rs  image.rs  lib.rs  oracle.rs  server.rs
crates/proof/tee/tdx-runtime/: Cargo.toml  README.md
crates/proof/tee/tdx-runtime/src/: error.rs  lib.rs  quote.rs  report_data.rs  runtime.rs  signer.rs
crates/proof/tee/tdx-verifier/: Cargo.toml  README.md
crates/proof/tee/tdx-verifier/src/: attestation.rs  collateral.rs  error.rs  input.rs  lib.rs  quote.rs  types.rs  verify.rs
crates/vibenet/: README.md
devnet/: Cargo.toml  README.md
devnet/src/: devnet_config.rs  images.rs  rpc.rs  smoke.rs
devnet/tests/: bundles.rs  local_safe_head.rs  native_dex.rs  smoke.rs  tx_forwarding.rs
docs/autonomy/: perf-autopilot.md  perf-journal.md  perf-pr-template.md  perf_context.py
docs/guides/: P2P.md  UPGRADES.md
docs/specs/: vocs.config.ts
etc/docker/: Justfile  README.md  devnet-env  docker-compose.ha.yml  docker-compose.yml
etc/just/: build.just  check.just
etc/vibenet/: README.md  docker-compose.public.yml  docker-compose.vibenet.yml  vibenet-env.example
unstableup/: README.md
(+1091 files in other folders)
