[package]
name = "base-batcher-admin"
description = "Admin JSON-RPC API server for the Unstable Batcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
base-batcher-core.workspace = true
tracing = { workspace = true, features = ["std"] }
derive_more = { workspace = true, features = ["debug"] }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
