[package]
name = "base-roxy-backend"
description = "Backend implementations for Roxy RPC proxy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal
base-roxy-types.workspace = true
base-roxy-traits.workspace = true

# alloy
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true

# async
tokio.workspace = true
async-trait.workspace = true

# networking
reqwest = { workspace = true, features = ["json"] }

# misc
tracing.workspace = true
derive_more = { workspace = true, features = ["debug"] }
