[package]
name = "base-roxy-cache"
description = "Cache implementations for Roxy RPC proxy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal
base-roxy-traits.workspace = true

# alloy
alloy-primitives.workspace = true

# caching
lru.workspace = true
redis = { version = "0.27", features = ["tokio-comp"] }

# compression
brotli = { workspace = true, features = ["std"] }

# async
tokio.workspace = true

# misc
bytes.workspace = true
tracing.workspace = true
serde_json.workspace = true
derive_more = { workspace = true, features = ["debug"] }

[dev-dependencies]
rstest.workspace = true
