[package]
name = "base-roxy-runtime"
description = "Runtime implementations for Roxy RPC proxy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal
base-roxy-traits.workspace = true

# async
tokio.workspace = true

# derive macros
derive_more = { workspace = true, features = ["debug"] }
