[package]
name = "base-roxy-server"
description = "HTTP/WebSocket server for Roxy RPC proxy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal
base-roxy-types.workspace = true
base-roxy-traits.workspace = true
base-roxy-backend.workspace = true
base-roxy-rpc.workspace = true
base-roxy-cache.workspace = true

# alloy
alloy-json-rpc.workspace = true

# networking
axum = { workspace = true, features = ["http1", "http2", "tokio", "ws"] }
tower.workspace = true
hyper.workspace = true

# async
tokio.workspace = true
futures.workspace = true

# serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bytes.workspace = true

# misc
tracing.workspace = true
eyre.workspace = true

# metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
rstest.workspace = true
