[package]
name = "base-roxy-test-utils"
description = "Test utilities for Roxy RPC proxy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal
base-roxy-types.workspace = true
base-roxy-traits.workspace = true

# alloy
alloy-json-rpc.workspace = true

# async
tokio.workspace = true
async-trait.workspace = true

# serialization
serde_json.workspace = true

[dev-dependencies]
rstest.workspace = true
