[package]
name = "base-snappy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bollard = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reth-cli-commands = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["std", "derive"] }
aws-sdk-s3 = { workspace = true, features = ["rustls", "default-https-client", "rt-tokio"] }

[dev-dependencies]
futures = { workspace = true }
tempfile = { workspace = true }
bollard = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["full"] }
testcontainers = { workspace = true, features = ["blocking", "host-port-exposure"] }
aws-config = { workspace = true, features = ["default-https-client", "rt-tokio"] }
testcontainers-modules = { workspace = true, features = ["minio"] }
