[package]
name = "base-proof-tee-tdx-collateral"
description = "Host-side Intel TDX collateral hydration for attestation proofs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# TDX verification and proof input encoding
base-proof-tee-tdx-verifier.workspace = true
base-proof-tee-tdx-attestation-prover.workspace = true

# Types
alloy-primitives.workspace = true

# X.509 / CRL
x509-parser.workspace = true

# HTTP
reqwest.workspace = true

# Async
tokio = { workspace = true, features = ["time", "macros"] }

# Error
thiserror.workspace = true

# Tracing
tracing.workspace = true

# Misc
url.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }

[dev-dependencies]
rstest.workspace = true
